--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -203,5 +203,5 @@ jobs:
           tag=$d-${{ matrix.os }}-${{ github.sha }}
           docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag .
           echo ${{ secrets.GITHUB_TOKEN }} | docker login https://docker.pkg.github.com -u USERNAME --password-stdin
-#          docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD} # success
-#          docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag
+          docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag
+#          docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD} # success and --password-stdin warning
