--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -218,7 +218,9 @@ jobs:
           DOCKER_USERNAME: ${{ github.actor }}
           DOCKER_PASSWORD: ${{ secrets.GCR }}
         run: |
-          echo ${DOCKER_PASSWORD} | docker login https://ghcr.io -u ${DOCKER_USERNAME} --password-stdin
+          echo "something"
+          echo "${DOCKER_PASSWORD}"" | docker login https://ghcr.io -u ${DOCKER_USERNAME} --password-stdin
+          #echo "${{ secrets.GCR }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
           tag=$d-${{ matrix.os }}-${{ github.sha }}
           IMAGE_AND_TAG = ghcr.io/lotharschulz/hello-github-actions/hello-github-actions:$tag
