--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -213,11 +213,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Log into GitHub Container Registry
+        run: echo "${{ secrets.GCR }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
+
       - name: Build and Push
         run: |
-          echo "something"
-          echo "${{ secrets.GCR }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
-          echo "something 2"
+          #echo "something"
+          #echo "${{ secrets.GCR }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
+          #echo "something 2"
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
           tag=$d-${{ matrix.os }}-${{ github.sha }}
           IMAGE_AND_TAG = ghcr.io/lotharschulz/hello-github-actions/hello-github-actions:$tag
