--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -215,7 +215,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Log into GitHub Container Registry
-        run: echo "${{ secrets.GCR }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build and Push
         run: |
