--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -199,10 +199,10 @@ jobs:
           DOCKER_USERNAME: ${{ github.actor }}
           DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          d=$(date +%Y-%m-%d--%H-%M-%S--%N)
-          tag=$d-${{ matrix.os }}-${{ github.sha }}
-          docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag .
           echo ${DOCKER_PASSWORD} | docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} --password-stdin
+          d=$(date +%Y-%m-%d--%H-%M-%S--%N)
+          tag=$d-${{ github.sha }}
+          docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag .
           docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag
 #          docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD} # success and --password-stdin warning
 
@@ -220,7 +220,7 @@ jobs:
         run: |
           echo "${DOCKER_PASSWORD}" | docker login https://ghcr.io -u ${DOCKER_USERNAME} --password-stdin
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
-          tag=$d-${{ matrix.os }}-${{ github.sha }}
+          tag=$d-${{ github.sha }}
           echo "$tag"
           IMAGE_AND_TAG=ghcr.io/lotharschulz/hello-github-actions/hello-github-actions:$tag
           echo "$IMAGE_AND_TAG"
