--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -157,54 +157,54 @@ jobs:
         docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
         docker push lotharschulz/hello-github-actions:$tag
 
-#  build_docker_and_push_to_github_packages:
-#    needs: [benchmark, test]
-#    name: Push Docker image to GitHub Packages using docker build-push-action
-#    runs-on: ubuntu-20.04
-#    steps:
-#      - name: Check out the repo
-#        uses: actions/checkout@v2
-#      - name: Dump GITHUB_RUN_ID
-#        env:
-#          GITHUB_RUN_ID: ${GITHUB_RUN_ID}
-#        run: echo "$GITHUB_RUN_ID"
-#      - name: GitHub Context and Now with nano seconds
-#        env:
-#          GITHUB_CONTEXT: ${{ toJson(github) }}
-#        run: |
-#          REPO=$(echo $GITHUB_CONTEXT | jq -r '.repository')
-#          echo $REPO
-#          FIRST_COMMIT_TIMESTAMP=$(echo $GITHUB_CONTEXT | jq -r '.event.commits[0].timestamp')
-#          echo $FIRST_COMMIT_TIMESTAMP
-#          JUSTNOW=$(date +%Y-%m-%d--%H-%M-%S--%N)
-#          echo $JUSTNOW
-#      - name: Push to GitHub Packages
-#        uses: docker/build-push-action@v1
-#        with:
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
-#          registry: docker.pkg.github.com
-#          #repository: lotharschulz/hello-github-actions/$JUSTNOW-$GITHUB_RUN_ID-${{ github.sha }}
-#          repository: lotharschulz/hello-github-actions/${{ github.sha }}
-#          tag_with_ref: true
-#
-#  build_docker_and_push_to_github_packages2:
-#    needs: [benchmark, test]
-#    name: Push Docker image to GitHub Packages using via docker cli commands
-#    runs-on: ubuntu-20.04
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Build and Push
-#        env:
-#          DOCKER_USERNAME: ${{ github.actor }}
-#          DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-#        run: |
-#          echo ${DOCKER_PASSWORD} | docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} --password-stdin
-#          d=$(date +%Y-%m-%d--%H-%M-%S--%N)
-#          tag=$d-${{ github.sha }}
-#          docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag .
-#          docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag
-##          docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD} # success and --password-stdin warning
+  build_docker_and_push_to_github_packages:
+    needs: [benchmark, test]
+    name: Push Docker image to GitHub Packages using docker build-push-action
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Dump GITHUB_RUN_ID
+        env:
+          GITHUB_RUN_ID: ${GITHUB_RUN_ID}
+        run: echo "$GITHUB_RUN_ID"
+      - name: GitHub Context and Now with nano seconds
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: |
+          REPO=$(echo $GITHUB_CONTEXT | jq -r '.repository')
+          echo $REPO
+          FIRST_COMMIT_TIMESTAMP=$(echo $GITHUB_CONTEXT | jq -r '.event.commits[0].timestamp')
+          echo $FIRST_COMMIT_TIMESTAMP
+          JUSTNOW=$(date +%Y-%m-%d--%H-%M-%S--%N)
+          echo $JUSTNOW
+      - name: Push to GitHub Packages
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.pkg.github.com
+          #repository: lotharschulz/hello-github-actions/$JUSTNOW-$GITHUB_RUN_ID-${{ github.sha }}
+          repository: lotharschulz/hello-github-actions/${{ github.sha }}
+          tag_with_ref: true
+
+  build_docker_and_push_to_github_packages2:
+    needs: [benchmark, test]
+    name: Push Docker image to GitHub Packages using via docker cli commands
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build and Push
+        env:
+          DOCKER_USERNAME: ${{ github.actor }}
+          DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo ${DOCKER_PASSWORD} | docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} --password-stdin
+          d=$(date +%Y-%m-%d--%H-%M-%S--%N)
+          tag=$d-${{ github.sha }}
+          docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag .
+          docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag
+#          docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD} # success and --password-stdin warning
 
   ghr_push:
     needs: [benchmark, test]
