--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -154,7 +154,8 @@ jobs:
         d=$(date +%Y-%m-%d)
         tag=$d-${{ matrix.os }}-${{ github.sha }}
         docker build -t lotharschulz/hello-github-actions:$tag .
-        docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
+        echo "${DOCKER_PASSWORD}" | docker login --username ${DOCKER_USERNAME} --password-stdin
+        # docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
         docker push lotharschulz/hello-github-actions:$tag
 
   build_docker_and_push_to_github_packages:
@@ -185,7 +186,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
           #repository: lotharschulz/hello-github-actions/$JUSTNOW-$GITHUB_RUN_ID-${{ github.sha }}
-          repository: lotharschulz/hello-github-actions/${{ github.sha }}
+          repository: lotharschulz/hello-github-actions/hello-github-actions-pkg-${{ github.sha }}
           tag_with_ref: true
 
   build_docker_and_push_to_github_packages2:
@@ -203,7 +204,7 @@ jobs:
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
           tag=$d-cli
           docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag .
-          docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag
+          docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions-pkg2:$tag
 #          docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD} # success and --password-stdin warning
 
   ghr_push:
@@ -221,7 +222,7 @@ jobs:
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
           tag=$d-${{ github.sha }}
           echo "$tag"
-          IMAGE_AND_TAG=ghcr.io/lotharschulz/hello-github-actions/hello-github-actions:$tag
+          IMAGE_AND_TAG=ghcr.io/lotharschulz/hello-github-actions/hello-github-actions-ghr:$tag
           echo "$IMAGE_AND_TAG"
           docker build -t $IMAGE_AND_TAG .
           docker push $IMAGE_AND_TAG
