--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -154,7 +154,8 @@ jobs:
         d=$(date +%Y-%m-%d)
         tag=$d-${{ matrix.os }}-${{ github.sha }}
         docker build -t lotharschulz/hello-github-actions:$tag .
-        docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
+        # docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
+        echo ${DOCKER_PASSWORD} | docker login -u ${DOCKER_USERNAME} --password-stdin
         docker push lotharschulz/hello-github-actions:$tag
 
   build_docker_and_push_to_github_packages:
@@ -202,7 +203,7 @@ jobs:
           echo ${DOCKER_PASSWORD} | docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} --password-stdin
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
           tag=$d-cli
-          docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag .
+          docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions-pkg2:$tag .
           docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions-pkg2:$tag
 #          docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD} # success and --password-stdin warning
 
