--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -178,7 +178,7 @@ jobs:
           FIRST_COMMIT_TIMESTAMP=$(echo $GITHUB_CONTEXT | jq -r '.event.commits[0].timestamp')
           echo $FIRST_COMMIT_TIMESTAMP
           JUSTNOW=$(date +%Y-%m-%d--%H-%M-%S--%N)
-          echo $JUSTNOW
+          echo "JUSTNOW: ${JUSTNOW}"
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v2
         with:
@@ -203,9 +203,9 @@ jobs:
           echo ${DOCKER_PASSWORD} | docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} --password-stdin
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
           tag=$d-cli
+          echo "tag: ${tag}"
           docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions-pkg2:$tag .
           docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions-pkg2:$tag
-#          docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD} # success and --password-stdin warning
 
   ghr_push:
     needs: [benchmark, test]
