--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -125,7 +125,7 @@ jobs:
           GITHUB_RUN_NUMBER: ${GITHUB_GRAPHQL_URL}
         run: echo "$GITHUB_GRAPHQL_URL"
 
-  build_docker_and_push_to_dockerhub_if_linux:
+push2dockerhub_if_linux:
     needs: [benchmark, test]
     strategy:
       fail-fast: false
@@ -160,7 +160,7 @@ jobs:
 
   build_docker_and_push_to_github_packages:
     needs: [benchmark, test]
-    name: Push Docker image to GitHub Packages using docker build-push-action
+    name: build-push-action to docker.pkg.github.com
     runs-on: ubuntu-20.04
     steps:
       - name: Check out the repo
@@ -191,7 +191,7 @@ jobs:
 
   build_docker_and_push_to_github_packages2:
     needs: [benchmark, test]
-    name: Push Docker image to GitHub Packages using via docker cli commands
+    name: build-push-action via docker cli
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -209,7 +209,7 @@ jobs:
 
   ghr_push:
     needs: [benchmark, test]
-    name: Push Docker image to Container Registry
+    name: ghcr push
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -222,7 +222,7 @@ jobs:
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
           tag=$d-${{ github.sha }}
           echo "$tag"
-          IMAGE_AND_TAG=ghcr.io/lotharschulz/hello-github-actions/hello-github-actions-ghr:$tag
+          IMAGE_AND_TAG=ghcr.io/lotharschulz/hello-github-actions/hello-github-actions-ghcr:$tag
           echo "$IMAGE_AND_TAG"
           docker build -t $IMAGE_AND_TAG .
           docker push $IMAGE_AND_TAG
