--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -165,28 +165,13 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name: Dump GITHUB_RUN_ID
-        env:
-          GITHUB_RUN_ID: ${GITHUB_RUN_ID}
-        run: echo "$GITHUB_RUN_ID"
-      - name: GitHub Context and Now with nano seconds
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: |
-          REPO=$(echo $GITHUB_CONTEXT | jq -r '.repository')
-          echo $REPO
-          FIRST_COMMIT_TIMESTAMP=$(echo $GITHUB_CONTEXT | jq -r '.event.commits[0].timestamp')
-          echo $FIRST_COMMIT_TIMESTAMP
-          JUSTNOW=$(date +%Y-%m-%d--%H-%M-%S--%N)
-          echo "JUSTNOW: ${JUSTNOW}"
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v2
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          #repository: lotharschulz/hello-github-actions/$JUSTNOW-$GITHUB_RUN_ID-${{ github.sha }}
-          repository: lotharschulz/hello-github-actions/hello-github-actions-pkg-${{ github.sha }}
+          repository: lotharschulz/hello-github-actions/hello-github-actions-pkg
           tag_with_ref: true
 
   build_docker_and_push_to_github_packages2:
