--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -154,7 +154,6 @@ jobs:
         d=$(date +%Y-%m-%d)
         tag=$d-${{ matrix.os }}-${{ github.sha }}
         docker build -t lotharschulz/hello-github-actions:$tag .
-        # docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
         echo ${DOCKER_PASSWORD} | docker login -u ${DOCKER_USERNAME} --password-stdin
         docker push lotharschulz/hello-github-actions:$tag
 
@@ -171,10 +170,10 @@ jobs:
         run: |
           echo ${DOCKER_PASSWORD} | docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} --password-stdin
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
-          tag=$d-cli
-          echo "tag: ${tag}"
-          docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions-pkg:$tag .
-          docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions-pkg:$tag
+          tag=$d-${{ github.sha }}
+          IMAGE_AND_TAG=docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions-pkg:$tag
+          docker build -t IMAGE_AND_TAG .
+          docker push IMAGE_AND_TAG
 
   ghcr_push:
     needs: [benchmark, test]
@@ -190,8 +189,6 @@ jobs:
           echo "${GCR_PASSWORD}" | docker login https://ghcr.io -u ${GCR_USERNAME} --password-stdin
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
           tag=$d-${{ github.sha }}
-          echo "$tag"
           IMAGE_AND_TAG=ghcr.io/lotharschulz/hello-github-actions/hello-github-actions-ghcr:$tag
-          echo "$IMAGE_AND_TAG"
           docker build -t $IMAGE_AND_TAG .
           docker push $IMAGE_AND_TAG
