--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -172,8 +172,8 @@ jobs:
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
           tag=$d-${{ github.sha }}
           IMAGE_AND_TAG=docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions-pkg:$tag
-          docker build -t IMAGE_AND_TAG .
-          docker push IMAGE_AND_TAG
+          docker build -t $IMAGE_AND_TAG .
+          docker push $IMAGE_AND_TAG
 
   ghcr_push:
     needs: [benchmark, test]
