--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -125,7 +125,7 @@ jobs:
           GITHUB_RUN_NUMBER: ${GITHUB_GRAPHQL_URL}
         run: echo "$GITHUB_GRAPHQL_URL"
 
-  build_docker_and_push_to_dockerhub_if_linux:
+  push2dockerhub_if_linux:
     needs: [benchmark, test]
     strategy:
       fail-fast: false
@@ -154,43 +154,12 @@ jobs:
         d=$(date +%Y-%m-%d)
         tag=$d-${{ matrix.os }}-${{ github.sha }}
         docker build -t lotharschulz/hello-github-actions:$tag .
-        docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
+        echo ${DOCKER_PASSWORD} | docker login -u ${DOCKER_USERNAME} --password-stdin
         docker push lotharschulz/hello-github-actions:$tag
 
-  build_docker_and_push_to_github_packages:
+  push_to_docker_pkg:
     needs: [benchmark, test]
-    name: Push Docker image to GitHub Packages using docker build-push-action
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
-      - name: Dump GITHUB_RUN_ID
-        env:
-          GITHUB_RUN_ID: ${GITHUB_RUN_ID}
-        run: echo "$GITHUB_RUN_ID"
-      - name: GitHub Context and Now with nano seconds
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: |
-          REPO=$(echo $GITHUB_CONTEXT | jq -r '.repository')
-          echo $REPO
-          FIRST_COMMIT_TIMESTAMP=$(echo $GITHUB_CONTEXT | jq -r '.event.commits[0].timestamp')
-          echo $FIRST_COMMIT_TIMESTAMP
-          JUSTNOW=$(date +%Y-%m-%d--%H-%M-%S--%N)
-          echo $JUSTNOW
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v2
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          #repository: lotharschulz/hello-github-actions/$JUSTNOW-$GITHUB_RUN_ID-${{ github.sha }}
-          repository: lotharschulz/hello-github-actions/${{ github.sha }}
-          tag_with_ref: true
-
-  build_docker_and_push_to_github_packages2:
-    needs: [benchmark, test]
-    name: Push Docker image to GitHub Packages using via docker cli commands
+    name: build-push-action via docker cli
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -201,14 +170,14 @@ jobs:
         run: |
           echo ${DOCKER_PASSWORD} | docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} --password-stdin
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
-          tag=$d-cli
-          docker build -t docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag .
-          docker push docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions:$tag
-#          docker login https://docker.pkg.github.com -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD} # success and --password-stdin warning
+          tag=$d-${{ github.sha }}
+          IMAGE_AND_TAG=docker.pkg.github.com/lotharschulz/hello-github-actions/hello-github-actions-pkg:$tag
+          docker build -t $IMAGE_AND_TAG .
+          docker push $IMAGE_AND_TAG
 
-  ghr_push:
+  ghcr_push:
     needs: [benchmark, test]
-    name: Push Docker image to Container Registry
+    name: ghcr push
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -220,8 +189,6 @@ jobs:
           echo "${GCR_PASSWORD}" | docker login https://ghcr.io -u ${GCR_USERNAME} --password-stdin
           d=$(date +%Y-%m-%d--%H-%M-%S--%N)
           tag=$d-${{ github.sha }}
-          echo "$tag"
-          IMAGE_AND_TAG=ghcr.io/lotharschulz/hello-github-actions/hello-github-actions:$tag
-          echo "$IMAGE_AND_TAG"
+          IMAGE_AND_TAG=ghcr.io/lotharschulz/hello-github-actions/hello-github-actions-ghcr:$tag
           docker build -t $IMAGE_AND_TAG .
           docker push $IMAGE_AND_TAG
